--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 # Launch command: docker-compose up
 name: counter-app
+
 services:
   otel-collector:
     image: otel/opentelemetry-collector-contrib
@@ -70,3 +71,15 @@ services:
       OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4318
       OTEL_SERVICE_NAME: counter-store
       OTEL_RESOURCE_ATTRIBUTES: deployment.environment=production,service.version=1.0.0.0
+
+  grafana:
+    image: grafana/grafana-enterprise
+    hostname: grafana
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana-storage:/var/lib/grafana
+    restart: unless-stopped
+
+volumes:
+  grafana-storage:
